[network] Fix vertical alignment of preflight icon.
Fixed: chromium:1505629
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5257379
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
(cherry picked from commit b6c53385db7d1f20993c9befdb6b1bcef7e220b9)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5290154
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -237,6 +237,7 @@
 .network-log-grid.data-grid.small .icon {
   width: 16px;
   height: 16px;
+  vertical-align: sub;
 }
 
 .image-network-icon-preview {
